tests/ui/invalid_pyo3imports.stderr
error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:18:25
   |
18 | #[pyo3import(py_adders: form adders import addone)]
   |                         ^^^^

error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:22:37
   |
22 | #[pyo3import(py_adders: from adders improt addone)]
   |                                     ^^^^^^
